Bugfix: Sidebar
usericon is not shown properly on too small windows

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -22,7 +22,7 @@
         align-items: center;
         text-decoration: none;
         color: #687d9a;
-        margin: 1rem 0;
+        margin: 0.6rem 0;
         line-height: 1.2em;
     }
 
